# indic_tokenizer

./: README.md  __init__.py  __main__.py  bpe_trainer.py  chunked_trainer.py  preprocessor.py  pyproject.toml  requirements.txt  sp_tokenizer.py  test_tokenizers.py  thirukkural.txt
indic_tokenizer/: __init__.py  __main__.py  bpe_tokenizer.py  constants.py  data_loader.py  sentencepiece_tokenizer.py  vocab_builder.py
